--- a/Imputation_intro.Rmd
+++ b/Imputation_intro.Rmd
@@ -62,7 +62,6 @@ class: inverse, center, middle
 --
 
 - Deductive (logical) imputation
-  - Rule based
 
 ---
 
@@ -78,6 +77,30 @@ Two general approaches:
   - Predictive mean matching
 
 1. Random draws (stratified)
+
+---
+
+# Donor imputation
+
+When is a donor good enough?
+
+And can different donors be used for the same observations?
+
+--
+
+3 cases:
+
+1. Complete:
+  - All imputed variables complete for doner
+  - Same donor for all variables
+
+1. Univariate
+  - Variables are imputed one by one
+  - Seperate donors for each variable
+
+1. Multivariate
+  - Donor pool for each missingness value
+  - Same donor for all variables
 
 ---
 
@@ -110,6 +133,7 @@ Two general approaches:
 # Example: Linear prediction (1/2)
 
 ```{r, echo=FALSE, message=FALSE, fig.height=7, fig.align='center'}
+
 ggplot(data = mtcars, aes(x = wt, y = hp)) +
   geom_smooth(method = "lm", se = FALSE, size = 2) +
   geom_point(size = 3) +
@@ -322,7 +346,6 @@ lfs_mf <- lfs %>%
 
 lfs_mf %>% count(employed, is.na(hours))
 ```
-
 ---
 class: inverse, center, middle
 
@@ -333,6 +356,8 @@ class: inverse, center, middle
 
 # Ressources
 
+Presentation: [GitHub](https://github.com/akselthomsen/Twinning-Geostat-2020)
+
 EU / MEMOBUST: [Handbook on imputation](https://ec.europa.eu/eurostat/cros/content/imputation_en)
 
 CRAN Task View: [Official Statistics & Survey Methodology](https://cran.r-project.org/web/views/OfficialStatistics.html)
@@ -340,4 +365,7 @@ CRAN Task View: [Official Statistics & Survey Methodology](https://cran.r-projec
 Mark van der loo: [simputation: Simple Imputation](https://CRAN.R-project.org/package=simputation)
 
 RStudio: [Tidyverse collection of R packages](https://www.tidyverse.org/)
+
+Awesome official statistics software: [GSBPM & R packages](https://github.com/SNStatComp/awesome-official-statistics-software)
+
 
