--- a/Imputation_intro.Rmd
+++ b/Imputation_intro.Rmd
@@ -3,7 +3,7 @@ title: "Doner based imputation methods"
 subtitle: "with apllications in R"
 author: "Aksel Thomsen (akt@dst.dk)"
 institute: "Statistics Denmark"
-date: "2020/12/7"
+date: "2020/4/15 (original 2020/12/7)"
 output:
   xaringan::moon_reader:
     lib_dir: libs
